styled navbar, team, join, and added exec profiles

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,4 +1,4 @@
-.home-container {
+.page-container {
   display: flex;
   flex-direction: column; /* Align children vertically */
   align-items: center; /* Center children horizontally */
