cleaned up page styling and added 3d rock

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -11,31 +11,49 @@
 }
 
 .main-about {
+  margin: 30px 0px 30px 0px; 
+  padding: 150px 0px 150px 0px;
+  background-color: #000; /* Optional: background color inside the box */
+  width: 100vw;
+}
+
+.main-about p {
+  padding-left: 100px;
+  padding-right: 100px;
   text-align:left;
-  border: 2px solid #000;
-  padding: 20px; /* Space inside the border */
-  margin: 20px; /* Space outside the border */
-  background-color: #fff; /* Optional: background color inside the box */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: shadow for a 3D effect */
+  color: white;
+  font-size: 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-about p {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 .black-button {
-  background-color: black; /* Black background */
-  width: 200px;
-  height: 100px;
+  text-decoration:none;
+  background-color: green; /* Black background */
+  display: inline-flex;
+  justify-content: center; /* Centers the text horizontally */
+  align-items: center;
+  line-height: 50px;
+  width: 300px;
+  height: 150px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   color: white; /* White text */
   border: none; /* Remove default border */
-  border-radius: 4px; /* Optional: rounded corners */
+  border-radius: 50px; /* Optional: rounded corners */
   padding: 10px 20px; /* Add padding */
-  font-size: 16px; /* Set font size */
+  font-size: 30px; /* Set font size */
   cursor: pointer; /* Show pointer cursor on hover */
-  text-align: center; /* Center text */
-  display: inline-block; /* Adjust width according to text */
   transition: background-color 0.3s ease; /* Smooth transition on hover */
 }
 
 .black-button:hover {
-  background-color: #333; /* Darker black for hover effect */
+  background-color: darkgreen; /* Darker black for hover effect */
 }
 
 .sponsors {
