--- a/frontend/src/styles/Join.css
+++ b/frontend/src/styles/Join.css
@@ -4,3 +4,55 @@
   align-items: center; /* Center children horizontally */
   text-align: center; /* Center text inside container */
 }
+
+.page-title h1 {
+  border: 2px solid;
+  border-color: black;
+  width: 99vw;
+  padding: 20px 0 20px 0;
+}
+
+.apply-about-card {
+  margin: 30px 0px 30px 0px; 
+  background-color: #ddd; 
+  border: 2px solid;
+}
+
+.apply-about-card p {
+  padding-left: 20%;
+  padding-right: 20%;
+  text-align:left;
+  color: black;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .apply-about-card p {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.join-button {
+  text-decoration:none;
+  background-color: black; /* Black background */
+  display: inline-flex;
+  justify-content: center; /* Centers the text horizontally */
+  align-items: center;
+  width: 100;
+  height: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: white; /* White text */
+  border: none; /* Remove default border */
+  border-radius: 50px; /* Optional: rounded corners */
+  padding: 10px 20px; /* Add padding */
+  font-size: 30px; /* Set font size */
+  cursor: pointer; /* Show pointer cursor on hover */
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+}
+
+.join-button:hover {
+  background-color: grey; /* Darker black for hover effect */
+}
+
