--- a/frontend/src/styles/TeamMemberProfile.css
+++ b/frontend/src/styles/TeamMemberProfile.css
@@ -1,12 +1,12 @@
 .team-member-profile {
   border: 1px solid #ddd;
+  border-color:black;
   border-radius: 10px;
   padding: 20px;
   margin: 20px;
   text-align: center;
   background-color: #fff;
   max-width: 300px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .team-member-image img {
